# vexor-benchmarks

./: .gitignore  README.md
.zed/: settings.json
benchmarker/: Cargo.toml
benchmarker/src/: main.rs
benchmarks/: requirements.txt
benchmarks/data/: ph-fractal.csv  ph-grid.csv  python-fractal.csv  python-grid.csv  vexor-fractal.csv  vexor-grid.csv
benchmarks/scripts/: plot_fractal.py  plot_fractal_loglog.py  plot_grid.py  plot_grid_loglog.py  plot_python_fractal.py  plot_python_grid.py  rec_ph.py  rec_vexor.py  record_benchmarks.py
haskell/: haskell.cabal
haskell-demo/: haskell-demo.cabal  ring.hs
haskell/design/: basic.hs  snake.hs
python/: harness.py  requirements.txt
python-harness/: harness.py  harness_timed.py
python-harness/design/: basic.py  circle.py  fractal.py  grid.py  snake2.py
python/design/: grid.py  snake.py
svg-timer/: Cargo.toml
svg-timer/src/: main.rs
vexor/: error.vx  fractal.vx  grid.vx  ring.vx
vexor/design/: circle.vx  fractal.vx
