cabal-version:      3.14
name:               haskell
version:            0.1.0.0
executable circle
    main-is:          circle.hs
    hs-source-dirs:   design
    build-depends:    base ^>=4.18.3.0,
                      diagrams-lib,
                      diagrams-svg
    default-language: Haskell2010

executable snake
    main-is:          snake.hs
    hs-source-dirs:   design
    build-depends:    base ^>=4.18.3.0,
                      diagrams-lib,
                      diagrams-svg,
                      colour
    default-language: Haskell2010

executable ring
    main-is:          ring.hs
    hs-source-dirs:   design
    build-depends:    base ^>=4.18.3.0,
                      diagrams-lib,
                      diagrams-svg,
                      colour
    default-language: Haskell2010
